support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_varargs_neg.i
%module xxx

%varargs(0,int x = 0) foo;
int foo(int x, ...);



